--- a/PeliculasAPI/PeliculasAPI/appsettings.Development.json
+++ b/PeliculasAPI/PeliculasAPI/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "CadenaDeConexion": "Esta es la cadena de conexión de desarrollo 2",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
