Creando Generos - Backend y Angular

--- a/PeliculasAPI/PeliculasAPI/appsettings.Development.json
+++ b/PeliculasAPI/PeliculasAPI/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
-  "CadenaDeConexion": "Esta es la cadena de conexión de desarrollo 2",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-8F1CGJJ;Database=PeliculasAPI;Integrated Security=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "OrigenesPermitidos": "http://localhost:4200"
 }
