--- a/angular-peliculas/package.json
+++ b/angular-peliculas/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@bluehalo/ngx-leaflet": "^19.0.0",
+    "@sweetalert2/ngx-sweetalert2": "^13.0.0",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.17.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
