Creando Actores - Angular y Backend
- Salvando Imágenes en Azure Storage
- Salvando Imágenes Localmente

--- a/PeliculasAPI/PeliculasAPI/appsettings.Development.json
+++ b/PeliculasAPI/PeliculasAPI/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-8F1CGJJ;Database=PeliculasAPI;Integrated Security=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-8F1CGJJ;Database=PeliculasAPI;Integrated Security=True;TrustServerCertificate=True",
+    "AzureStorageConnection": "xxx"
   },
   "Logging": {
     "LogLevel": {
