--- a/angular-peliculas/angular.json
+++ b/angular-peliculas/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "allowedCommonJsDependencies": ["moment", "sweetalert2", "leaflet"],
             "outputPath": "dist/angular-peliculas",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -44,8 +45,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "2MB",
+                  "maximumError": "2.5MB"
                 },
                 {
                   "type": "anyComponentStyle",
